syntax = "proto2";

package sl_pb;

message StartSimulationParams{
    repeated string id = 1;
    required int32 duration = 2;
}

message StopSimulationParams{
    repeated string id = 1;
}

message SetIndividualPoseParams {
    required string id = 1;
    required float vecX = 2;
    required float vecY = 3;
    required float vecZ = 4;
    required float quatX = 5;
    required float quatY = 6;
    required float quatZ = 7;
    required float quatW = 8;
}

message StartLoggingParams {
    required string taskId = 1;
    required string episodeId = 2;
}

message GetEpisodeDataParams {
    required string taskId = 1;
    required string episodeId = 2;
}

message ApplyForceToParams {
    required string id = 1;
    required float forceX = 2;
    required float forceY = 3;
    required float forceZ = 4;
}